@@ -534,20 +534,28 @@ always need to specify a value as well: for example,
      to separate columns a bit -->
 <informaltable frame="none">
 <tgroup cols="2"><tbody>
-<row><entry>auto</entry><entry>auto-install/enable</entry></row>
-<row><entry>classes</entry><entry>auto-install/classes</entry></row>
+<row><entry>priority</entry><entry>debconf/priority</entry></row>
 <row><entry>fb</entry><entry>debian-installer/framebuffer</entry></row>
 <row><entry>language</entry><entry>debian-installer/language</entry></row>
 <row><entry>country</entry><entry>debian-installer/country</entry></row>
 <row><entry>locale</entry><entry>debian-installer/locale</entry></row>
-<row><entry>priority</entry><entry>debconf/priority</entry></row>
+<row><entry>theme</entry><entry>debian-installer/theme</entry></row>
+<row><entry>auto</entry><entry>auto-install/enable</entry></row>
+<row><entry>classes</entry><entry>auto-install/classes</entry></row>
 <row><entry>file</entry><entry>preseed/file</entry></row>
 <row><entry>url</entry><entry>preseed/url</entry></row>
-<row><entry>interface</entry><entry>netcfg/choose_interface</entry></row>
-<row><entry>hostname&nbsp;&nbsp;&nbsp;</entry><entry>netcfg/get_hostname</entry></row>
 <row><entry>domain</entry><entry>netcfg/get_domain</entry></row>
+<row><entry>hostname&nbsp;&nbsp;&nbsp;</entry><entry>netcfg/get_hostname</entry></row>
+<row><entry>interface</entry><entry>netcfg/choose_interface</entry></row>
 <row><entry>protocol</entry><entry>mirror/protocol</entry></row>
 <row><entry>suite</entry><entry>mirror/suite</entry></row>
+<row><entry>modules</entry><entry>anna/choose_modules</entry></row>
+<row><entry>recommends</entry><entry>base-installer/install-recommends</entry></row>
+<row><entry>tasks</entry><entry>tasksel:tasksel/first</entry></row>
+<row><entry>desktop</entry><entry>tasksel:tasksel/desktop</entry></row>
+<row><entry>dmraid</entry><entry>disk-detect/dmraid/enable</entry></row>
+<row><entry>keymap</entry><entry>keyboard-configuration/xkb-keymap</entry></row>
+<row><entry>preseed-md5</entry><entry>preseed/file/checksum</entry></row>
 </tbody></tgroup>
 </informaltable>
 
