@@ -9,6 +9,7 @@ installation-guide (20120827) UNRELEASED; urgency=low
   * Add language-parallel build support.
   * Update figures.
   * Remove outdated keyboard configuration bits.
+  * Update preseed aliases.
 
   [ Simon Guinot ]
   * Document support for LaCie NASes. Closes: #686128
